--- a/web/css/main.css
+++ b/web/css/main.css
@@ -158,6 +158,7 @@ body{
 }
 .menu-category-item a{
     color: #788399;
+    text-decoration: none;
 }
 .menu-category-item a:hover,
 .menu-category-item{
@@ -493,8 +494,15 @@ body{
     font-size: 18px;
     color: #788399;
     cursor: pointer;
+    text-decoration: none;
 }
-.catalog-list-item:hover{
+.catalog-list-item a{
+    color: #788399;
+    cursor: pointer;
+    text-decoration: none;
+}
+.catalog-list-item:hover,
+.catalog-list-item a:hover{
     color: #4b98df;
 }
 .bg-blue{
