Fix registration. Add css for error messages. Fix js

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4107,6 +4107,10 @@ body{
 .container-item-menu a.close-right-menu-list:hover{
     color: #6b778f;
 }
+.help-block{
+    color: #b62c2c;
+    margin-top: 5px;
+}
 
 
 
