create index page

--- a/web/css/min-950px.css
+++ b/web/css/min-950px.css
@@ -1,3 +1,9 @@
+.header-menu-title{
+    display: none;
+}
+.header-menu-title.btn-select-city{
+    display: block;
+}
 .search_block{
     width: calc(100% - 295px);
 }
