--- a/web/css/min-540px.css
+++ b/web/css/min-540px.css
@@ -294,3 +294,9 @@
     width: 280px;
     margin-right: 0px;
 }
+
+/*loader start*/
+#loader-box{
+    margin-top: calc((100% + 150px)/2);
+}
+/*loader finish*/
