--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2846,6 +2846,9 @@ body{
     height: 26px;
     width: 26px;
     margin-right: 14px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
 }
 .notif-username{
     font-size: 14px;
@@ -4325,8 +4328,62 @@ form .field-input:first-child{
 
 /*end Cтили toastMessage*/
 
+/*loader start*/
+#loader-box{
+    width: 100%;
+    text-align: center;
+    position: relative;
+    margin-top: calc((100% + 28px)/2);
+}
+
+#loader-box span{
+    font: 22px/40px 'Open Sans', sans-serif;
+    text-shadow: 0 2px 2px rgba(0,0,0,.4);
+    font-weight: 600;
+    color: #fff;
+}
 
 
+.loader,
+.loader:after {
+    border-radius: 60px;
+    width: 60px;
+    height: 60px;
+}
+.loader {
+    margin: 0px auto;
+    position: relative;
+    border-top: 8px solid rgba(0, 0, 0, 0);
+    border-right: 8px solid rgba(0, 0, 0, 0);
+    border-bottom: 8px solid rgba(0, 0, 0, 0);
+    border-left: 8px solid #38538B;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load 1.1s infinite linear;
+    animation: load 1.1s infinite linear;
+}
+@-webkit-keyframes load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+/*loader finish*/
 
 
 
