--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2832,8 +2832,10 @@ body{
     cursor: pointer;
 }
 .right-arrow{
-    content: url("../img/right-arrow-icon.png");
+    background: url("../img/right-arrow-icon.png") no-repeat;
     margin-right: 30px;
+    height: 13px;
+    width: 9px;
 }
 .notif-header-menu{
     display: flex;
