--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1155,6 +1155,9 @@ body{
     padding: 2px 0px;
 
 }
+.menu-btns-card a{
+    text-decoration: none;
+}
 .btn2-menu{
     height: 54px;
     display: flex;
@@ -1169,10 +1172,11 @@ body{
 .btn2-menu:last-child{
     margin-right: 0px;
 }
-.btn2-menu:hover {
+.btn2-menu:hover,.btn2-menu-active {
     color: #444444;
     box-shadow: 0px 4px 0px 0px  #a7c9ff;
 }
+
 
 .block-photos-container{
     padding: 0 20px 20px 20px;
