--- a/web/css/main.css
+++ b/web/css/main.css
@@ -737,6 +737,9 @@ body{
     border: 1px solid #d3e4ff;
     cursor: pointer;
 }
+a.btn-show-more{
+    text-decoration: none;
+}
 .btn-show-more:hover{
     color: #444444;
     border: 1px solid #97a6c8;
@@ -1142,10 +1145,12 @@ body{
     content: url("../img/add-favorit-icon.png");
     margin-right: 10px;
 }
-.add-favorite:hover{
+.add-favorite:hover,
+.add-favorite.active{
     color: #444444;
 }
-.add-favorite:hover:before{
+.add-favorite:hover:before,
+.add-favorite.active:before{
     content: url("../img/add-favorit-icon-hover.png");
 }
 .menu-btns-card{
@@ -1501,6 +1506,7 @@ body{
     border-radius: 3px;
     background-color: #6b778f;
     margin-top: -2px;
+    min-width: 60px;
 }
 .elem-count-views:before{
     margin-right: 5px;
@@ -2043,6 +2049,7 @@ body{
     padding: 20px 20px 0px 20px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 .container-comments-header{
     margin-bottom: 20px;
@@ -2055,6 +2062,11 @@ body{
     display: flex;
     align-items: flex-start;
 }
+.profile-icon-commentator{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+}
 .profile-commentator{
     margin-left: 20px;
     height: 61px;
@@ -2062,10 +2074,26 @@ body{
     align-items: flex-end;
     margin-right: 20px;
 }
+.container-comment.main{
+    padding-top: 10px;
+}
+.container-comment.main .profile-commentator{
+    margin-left: 0px;
+}
 .comment-content{
     border-top: 1px solid #a7c9ff;
     width: 100%;
     padding: 20px 0;
+}
+
+.container-comment.main .profile-icon-commentator{
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    margin-bottom: -10px;
+}
+.container-comments .btn-show-more{
+    margin-top: 0px;
 }
 .comment-content-header{
     display: flex;
@@ -2578,7 +2606,6 @@ body{
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    padding-bottom: 20px;
     border-radius: 3px;
     box-shadow: 0px 2px 0px 0px #cdced0;
 }
@@ -2664,6 +2691,9 @@ body{
     color: #444444;
     font-family: PT_Sans bold;
     margin-top: 20px;
+}
+.container-news .card-block:nth-child(4n){
+    margin-right: 0px;
 }
 .block-news-container{
     max-width: 940px;
@@ -2853,7 +2883,13 @@ body{
 .notif-item{
     display: flex;
     align-items: stretch;
-    padding: 30px;
+    padding: 30px 30px 15px 30px;
+    margin-top: -30px;
+    margin-bottom: 15px;
+
+}
+.notif-item:first-child{
+    margin-top: 0px;
 }
 .notif-not-read{
     background-color: #f1f4fd;
@@ -4401,7 +4437,29 @@ form .field-input:first-child{
 }
 /*loader finish*/
 
-
+.container-message{
+    display: flex;
+    padding: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 0px 0px #bbbeb3;
+    border-radius: 0px 0px 3px 3px;
+    margin-bottom: 100px;
+    margin-top: 30px;
+    max-width: 915px;
+}
+.container-message p{
+    color: #444444;
+    font-size: 16px;
+    font-family: PT_Sans;
+    line-height: 20px;
+}
+.container-message p a{
+    color: #6b778f;
+    text-decoration: underline;
+}
+.container-message p a:hover{
+    color: #4b98df;
+}
 
 
 
