--- a/web/css/max-480px.css
+++ b/web/css/max-480px.css
@@ -49,6 +49,10 @@
 .container-comment{
     border-top: 1px solid #a7c9ff;
 }
+.block-issues .container-comment:first-child,
+.block-сomments-post .container-comment:first-child{
+    border-top: 0px solid;
+}
 .btn-comment{
     margin-left: 40px;
 }
@@ -63,6 +67,13 @@
 }
 .comment-text{
     margin-left: -60px;
+}
+.container-comment.main .btns-comment{
+    margin-left: -80px;
+}
+.container-comment.main .comment-text{
+    margin-left: -80px;
+    margin-top: 30px;
 }
 .user-level span{
     display: none;
