--- a/web/css/min-1190px.css
+++ b/web/css/min-1190px.css
@@ -52,7 +52,8 @@
 .block-сomments-post,
 .block-news-container,
 .container-cards-promo,
-.container-promo-statistic{
+.container-promo-statistic,
+.container-message{
     width: calc(100% - 315px);
 }
 .block-info-for-owner{
