--- a/web/css/min-950px.css
+++ b/web/css/min-950px.css
@@ -32,6 +32,7 @@
     width: calc(100% - 30px);
 }
 .block-description-card,
+.container-message,
 .container-post,
 .container-settings,
 .container-add-place{
