--- a/web/css/main.css
+++ b/web/css/main.css
@@ -624,7 +624,7 @@ body{
     cursor: pointer;
 }
 .bookmarks-btn,
-.bookmarks-btn-active{
+.bookmarks-btn.active{
     color: #ffffff;
     font-size: 14px;
     display: none;
@@ -634,7 +634,7 @@ body{
     left: 25px;
 }
 .card-photo:hover .bookmarks-btn,
-.card-photo:hover .bookmarks-btn-active{
+.card-photo:hover .bookmarks-btn.active{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -643,7 +643,7 @@ body{
     content: url("../img/bookmarks-icon.png");
     margin-right: 10px;
 }
-.bookmarks-btn-active:before{
+.bookmarks-btn.active:before{
     content: url("../img/bookmarks-icon-active.png");
     margin-right: 10px;
 }
@@ -1602,6 +1602,7 @@ a.btn-show-more{
     font-size: 16px;
     color: black;
     float: left;
+    text-decoration: none;
 }
 .user-points{
     color: #6b778f;
@@ -2038,38 +2039,46 @@ a.btn-show-more{
 .main-write-comment{
     padding:20px;
     display: flex;
-}
-.container-write-comments.under{
-    display: flex;
     flex-direction: column;
-    width: calc(100% + 40px);
-    margin-left: -20px;
-    z-index: 1;
+    align-items: flex-end;
 }
 .under-write-comment{
-    padding: 0px 20px 20px 20px;
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
-.container-write-comments.under + .container-comment .comment-content{
-    border-top: 0px;
+.profile-write-comment{
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
-.textarea-main-comment,
-.textarea-under-comment{
+
+.textarea-comment{
     color: #6b778f;
     font-family: PT_Sans;
     font-size: 16px;
     resize: none;
-    width: calc(100% - 100px );
+    width: calc(100% - 80px );
     border: none;
-    height: 40px;
-    padding-top: 20px;
+    height: 0px;
+    margin-top: -10px;
     line-height: 24px;
 }
+.container-write-comments .large-wide-button{
+    margin-top: -30px;
+}
+.container-write-comments.under{
+    margin-top: 20px;
+}
+.container-write-comments.under .large-wide-button{
+    margin-top: -10px;
+    margin-left: -20px;
+    width: calc(100% + 40px);
+}
 .container-comments{
-    padding: 20px 20px 0px 20px;
+    padding: 10px 20px 0px 20px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
 }
 .container-comments-header{
     margin-bottom: 20px;
@@ -2094,9 +2103,10 @@ a.btn-show-more{
     align-items: flex-end;
     margin-right: 20px;
 }
-.container-comment.main{
-    padding-top: 10px;
+.profile-commentator a{
+    display: flex;
 }
+
 .container-comment.main .profile-commentator{
     margin-left: 0px;
 }
@@ -2104,6 +2114,21 @@ a.btn-show-more{
     border-top: 1px solid #a7c9ff;
     width: 100%;
     padding: 20px 0;
+}
+
+.container-write-comments.under + .container-comment .comment-content{
+    border-top: 0px;
+}
+
+.container-write-comments.under .profile_under_comment{
+    margin-top: 0px;
+}
+.container-write-comments.under .textarea-comment{
+    margin-top: 0px;
+}
+
+.neig .comment-content{
+    border-bottom: 1px solid #a7c9ff;
 }
 
 .container-comment.main .profile-icon-commentator{
@@ -2150,15 +2175,21 @@ a.btn-show-more{
     margin-right: 10px;
 }
 .comment-text{
-    margin-top: 20px;
+    margin-top: 12px;
     font-size: 16px;
     line-height: 24px;
     color: #444444;
     font-family: PT_Sans;
 }
+.comment-status{
+    font-size: 16px;
+    line-height: 24px;
+    color: #6b778f;
+    font-family: PT_Sans;
+}
 .btns-comment{
     display: flex;
-    margin-top: 20px;
+    margin-top: 12px;
     color: #6b778f;
     font-size: 13px;
 }
